Add custom bootstrap styles

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -52,7 +52,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-icon"><img src ='../images/logo_iconAsset 3@3x.png' width="30px"></a>
+          <a class="navbar-icon"><img src ='../images/arctrade_logo.png' width="30px"></a>
           <a class="navbar-brand" href="#">arctrade</a>
         </div>
 
