--- a/src/css/custom-bootstrap-navbar.css
+++ b/src/css/custom-bootstrap-navbar.css
@@ -1,9 +1,103 @@
+.container-fluid{
+  padding-right: 0px
+}
+
 /* Navbar styles */
 
 .navbar{
   margin-bottom: 0px;
   border: 0px;
 }
+
+.navbar-brand{
+  padding: 15px 20px;
+}
+
+.navbar-icon {
+  float: left;
+  display: flex;
+  height: 50px;
+  width: 50px;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Navbar Links */
+
+.navbar > a {
+  color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a:hover{
+  color: #fff;
+}
+
+.navbar-default .navbar-nav > .active > a{
+  background-image: none;
+  font-weight: bold;
+}
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus{
+  background-color: #303030;
+  background-image: none;
+}
+
+.nav .navbar-nav > li .active > a{
+  font-weight: bold;
+}
+
+
+/* Navbar Hamburger */
+.navbar-toggle{
+  margin-right: 0px;
+  margin-top: 10px;
+}
+
+.navbar-default .navbar-toggle .icon-bar{
+  background-color: #fff;
+  width: 19px;
+  height: 1px;
+}
+
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+    background-color: transparent;
+}
+
+.navbar-default .navbar-toggle {
+    border: none;
+}
+
+.navbar-toggle span.icon-bar {
+    transition: all 0.15s;
+}
+
+.navbar-toggle span:nth-child(2) {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
+}
+
+.navbar-toggle span:nth-child(3) {
+    opacity: 0;
+}
+
+.navbar-toggle span:nth-child(4) {
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+}
+
+.navbar-toggle.collapsed span:nth-child(2),
+.navbar-toggle.collapsed span:nth-child(4) {
+    transform: rotate(0);
+}
+
+.navbar-toggle.collapsed span:nth-child(3) {
+    opacity: 1;
+}
+
+
+
+/* Dropdown Menu */
 
 .dropdown-menu{
   background-color: #303030;
@@ -27,7 +121,7 @@
 }
 
 .dropdown-menu .row > ul > li{
-  padding: 7px 30px;
+  padding: 5px 15px;
   color: #fff;
 }
 
@@ -39,127 +133,237 @@
   background-color: #464646;
 }
 
-`/*.dropdown:hover .dropdown-menu {
-  display: block;
-}*/`
-
-
-.navbar-brand{
-  padding: 15px 20px;
-}
-
-.navbar > a {
-  color: #fff;
-}
-
-.navbar-brand, .navbar-nav > li > a{
-  text-shadow: none;
-  color: #fff;
-}
-
-.navbar-default{
-  background-image: none;
-}
-
-
-.navbar-default .navbar-nav > li > a:hover{
-  color: #fff;
-}
-
-.navbar-default .navbar-nav > .active > a{
-  background-image: none;
-  font-weight: bold;
-}
-
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus{
-  background-color: #303030;
-  background-image: none;
-}
-
-.nav .navbar-nav > li .active > a{
-  font-weight: bold;
-}
-
-.navbar-icon {
-  float: left;
-  /*background: red;*/
+.open > .dropdown-menu{
   display: flex;
-  height: 50px;
-  width: 50px;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 20px;
 }
 
+.dropdown-menu li ul{
+  padding: 15px 30px 10px;
+}
+.dropdown-menu li ul li{
+  color: #fff;
+  padding: 8px 0px;
+  width: 125px
+}
+
+.dropdown-menu li ul li:hover{
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.dropdown-menu li ul li a{
+  color: #fff
+}
+
+.dropdown-menu li ul.single-item{
+  padding: 0px 30px 0px;
+}
+
+.open > .single-column{
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+}
+
+
+/* Yamm Styles */
+
+.yamm-content{
+  padding: 15px 10px
+}
+
+.yamm-content .row ul{
+  margin-bottom: 15px;
+}
+
+
+
+/* Subnav Menu */
+.subnav-container{
+  width: 100%;
+  height: 40px;
+  background-color: #36597c;
+}
+
+.subnav-list{
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.subnav-list li {
+  text-align: center;
+  font-weight: 500;
+  color: #fff;
+  list-style-type: none;
+  display: inline;
+}
+
+
+
+/* Account Menu */
+.account-icon{
+  margin-right: 10px;
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 900px) and (min-width: 768px) {
+  .container-fluid{
+    padding: 0px
+  }
+
+  .navbar-brand{
+    display: none
+  }
+
+  .user-name{
+    display: none;
+  }
+
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+
+  .subnav-container{
+    display: none;
+  }
+
+  .navbar-nav .open .dropdown-menu{
+    max-width: 100%;
+    background-color: #303030;
+  }
+
+  .navbar-brand{
+    padding: 15px 10px;
+  }
+
+  .navbar-icon{
+    margin-left: 15px
+  }
+
+}
 
 /* Extra Small Devices, Phones */
-    @media only screen and (min-width : 320px) and (max-width: 480px) {
+@media only screen and (min-width : 320px) and (max-width: 480px) {
 
-      .navbar-nav{
-        /*display: flex;
-        flex-wrap: wrap;*/
-        margin: 0px;
-      }
+  .container-fluid{
+    padding: 0px
+  }
 
-      .navbar-default{
-        /*height: 100vh*/
-      }
+  .container-fluid > .navbar-header, .container-fluid > .navbar-collapse{
+    margin-left: 0px;
+    margin-right: 0px
+  }
 
-      .navbar-collapse.in{
-        overflow-y: visible;
-        height: 100vh
-      }
+  .navbar-nav .open .dropdown-menu{
+    padding: 0px 20px 20px;
+    border-radius: 0px;
+    margin-top: -10px;
+  }
 
-      .nav > li{
-        width: 100%;
-        background-color: #000000;
-        padding: 5px 0px;
-      }
+  .navbar-nav{
+    /*display: flex;
+    flex-wrap: wrap;*/
+    margin: 0px;
+  }
 
-      .nav > li > a{
-        font-size: 15pt
-      }
+  .navbar-default{
+    /*height: 100vh*/
+  }
 
-      .nav > li .active{
-        background-color: #2d2d2d;
-      }
+  .navbar > a {
+    color: #fff;
+  }
 
-      /*.dropdown-menu{
-        display: block;
-      }*/
-      .dropdown .open .dropdown-menu{
-        background: green
-      }
+  .navbar-collapse{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 
-      .dropdown-menu .row {
-        margin-bottom: 20px;
-        width: auto;
-      }
+  .navbar-collapse.in{
+    overflow-y: visible;
+    /*height: 100vh*/
+  }
 
-      .dropdown-menu .row > ul > li{
-        padding: 7px 10px;
-      }
+  .nav > li{
+    width: 100%;
+    background-color: #000000;
+    padding: 5px 0px;
+  }
 
-      .dropdown-menu .title {
-        padding-left: 30px;
-        font-size: 11pt;
-        font-weight: bold;
-      }
+  .nav > li > a{
+    font-size: 15pt
+  }
 
-      .navbar-nav > li > .a{
-        font-size: 20pt;
-      }
+  .nav > li .active{
+    background-color: #2d2d2d;
+  }
 
-      .sub-menu {
-        padding-left: 35px;
-      }
-      .sub-menu > li {
-        padding: 5px 10px;
-        color: #fff
-      }
+  .dropdown .open .dropdown-menu{
+    background: green
+  }
 
-      .sub-menu .title {
-        font-weight: bold;
-      }
+  .dropdown-menu .row {
+    margin-bottom: 20px;
+    width: auto;
+  }
 
+  .dropdown-menu .row > ul > li{
+    padding: 7px 10px;
+  }
 
-    }
+  .dropdown-menu li ul{
+    padding: 10px 18px 0px;
+  }
+
+  .dropdown-menu li ul li{
+    width: 205px
+  }
+
+  .dropdown-menu li ul li:not(:first-child) {
+      padding-left: 15px;
+      /*content: ""*/
+  }
+
+  .dropdown-menu li ul.single-item{
+    padding: 0px 18px 0px;
+  }
+
+  .dropdown-menu .title {
+    padding-left: 30px;
+    font-size: 11pt;
+    font-weight: bold;
+  }
+
+  .navbar-nav > li > .a{
+    font-size: 20pt;
+  }
+
+  .sub-menu {
+    padding-left: 35px;
+  }
+
+  .sub-menu > li {
+    padding: 5px 10px;
+    color: #fff
+  }
+
+  .sub-menu .title {
+    font-weight: bold;
+  }
+
+  /* Yamm */
+  .yamm .yamm-content{
+    padding: 0px;
+  }
+
+  .yamm-content .row h3{
+    margin-top: 20px;
+  }
+}
