--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=5d4f946fdb11e52371a889f800057562)
- * Config saved to config.json and https://gist.github.com/5d4f946fdb11e52371a889f800057562
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=9e3f21cf82155c66a8edca4d16679b2a)
+ * Config saved to config.json and https://gist.github.com/9e3f21cf82155c66a8edca4d16679b2a
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -1343,11 +1343,11 @@ mark,
   color: #777777;
 }
 .text-primary {
-  color: #7448ff;
+  color: #25b16c;
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #4d15ff;
+  color: #1c8752;
 }
 .text-success {
   color: #3c763d;
@@ -1379,11 +1379,11 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #7448ff;
+  background-color: #25b16c;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #4d15ff;
+  background-color: #1c8752;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -3121,26 +3121,26 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #7448ff;
-  border-color: #612eff;
+  background-color: #25b16c;
+  border-color: #219c5f;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff;
-  background-color: #4d15ff;
-  border-color: #2a00ae;
+  background-color: #1c8752;
+  border-color: #0b321f;
 }
 .btn-primary:hover {
   color: #ffffff;
-  background-color: #4d15ff;
-  border-color: #3a00f0;
+  background-color: #1c8752;
+  border-color: #166940;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #4d15ff;
-  border-color: #3a00f0;
+  background-color: #1c8752;
+  border-color: #166940;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3152,8 +3152,8 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #ffffff;
-  background-color: #3a00f0;
-  border-color: #2a00ae;
+  background-color: #166940;
+  border-color: #0b321f;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3169,35 +3169,35 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #7448ff;
-  border-color: #612eff;
+  background-color: #25b16c;
+  border-color: #219c5f;
 }
 .btn-primary .badge {
-  color: #7448ff;
+  color: #25b16c;
   background-color: #ffffff;
 }
 .btn-success {
   color: #ffffff;
-  background-color: #0bd670;
-  border-color: #0abe63;
+  background-color: #76efb2;
+  border-color: #5feca5;
 }
 .btn-success:focus,
 .btn-success.focus {
   color: #ffffff;
-  background-color: #09a557;
-  border-color: #044424;
+  background-color: #48ea98;
+  border-color: #15b765;
 }
 .btn-success:hover {
   color: #ffffff;
-  background-color: #09a557;
-  border-color: #078445;
+  background-color: #48ea98;
+  border-color: #28e686;
 }
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
   color: #ffffff;
-  background-color: #09a557;
-  border-color: #078445;
+  background-color: #48ea98;
+  border-color: #28e686;
 }
 .btn-success:active:hover,
 .btn-success.active:hover,
@@ -3209,8 +3209,8 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success.active.focus,
 .open > .dropdown-toggle.btn-success.focus {
   color: #ffffff;
-  background-color: #078445;
-  border-color: #044424;
+  background-color: #28e686;
+  border-color: #15b765;
 }
 .btn-success:active,
 .btn-success.active,
@@ -3226,35 +3226,35 @@ fieldset[disabled] .btn-success:focus,
 .btn-success.disabled.focus,
 .btn-success[disabled].focus,
 fieldset[disabled] .btn-success.focus {
-  background-color: #0bd670;
-  border-color: #0abe63;
+  background-color: #76efb2;
+  border-color: #5feca5;
 }
 .btn-success .badge {
-  color: #0bd670;
+  color: #76efb2;
   background-color: #ffffff;
 }
 .btn-info {
   color: #ffffff;
-  background-color: #2c41e4;
-  border-color: #1c32db;
+  background-color: #76b9ef;
+  border-color: #5fadec;
 }
 .btn-info:focus,
 .btn-info.focus {
   color: #ffffff;
-  background-color: #192dc4;
-  border-color: #0d186a;
+  background-color: #48a2ea;
+  border-color: #156fb7;
 }
 .btn-info:hover {
   color: #ffffff;
-  background-color: #192dc4;
-  border-color: #1525a4;
+  background-color: #48a2ea;
+  border-color: #2891e6;
 }
 .btn-info:active,
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #ffffff;
-  background-color: #192dc4;
-  border-color: #1525a4;
+  background-color: #48a2ea;
+  border-color: #2891e6;
 }
 .btn-info:active:hover,
 .btn-info.active:hover,
@@ -3266,8 +3266,8 @@ fieldset[disabled] .btn-success.focus {
 .btn-info.active.focus,
 .open > .dropdown-toggle.btn-info.focus {
   color: #ffffff;
-  background-color: #1525a4;
-  border-color: #0d186a;
+  background-color: #2891e6;
+  border-color: #156fb7;
 }
 .btn-info:active,
 .btn-info.active,
@@ -3283,35 +3283,35 @@ fieldset[disabled] .btn-info:focus,
 .btn-info.disabled.focus,
 .btn-info[disabled].focus,
 fieldset[disabled] .btn-info.focus {
-  background-color: #2c41e4;
-  border-color: #1c32db;
+  background-color: #76b9ef;
+  border-color: #5fadec;
 }
 .btn-info .badge {
-  color: #2c41e4;
+  color: #76b9ef;
   background-color: #ffffff;
 }
 .btn-warning {
   color: #ffffff;
-  background-color: #fb7f1c;
-  border-color: #f97104;
+  background-color: #efd376;
+  border-color: #eccc5f;
 }
 .btn-warning:focus,
 .btn-warning.focus {
   color: #ffffff;
-  background-color: #e06604;
-  border-color: #7c3802;
+  background-color: #eac448;
+  border-color: #b79115;
 }
 .btn-warning:hover {
   color: #ffffff;
-  background-color: #e06604;
-  border-color: #bd5603;
+  background-color: #eac448;
+  border-color: #e6ba28;
 }
 .btn-warning:active,
 .btn-warning.active,
 .open > .dropdown-toggle.btn-warning {
   color: #ffffff;
-  background-color: #e06604;
-  border-color: #bd5603;
+  background-color: #eac448;
+  border-color: #e6ba28;
 }
 .btn-warning:active:hover,
 .btn-warning.active:hover,
@@ -3323,8 +3323,8 @@ fieldset[disabled] .btn-info.focus {
 .btn-warning.active.focus,
 .open > .dropdown-toggle.btn-warning.focus {
   color: #ffffff;
-  background-color: #bd5603;
-  border-color: #7c3802;
+  background-color: #e6ba28;
+  border-color: #b79115;
 }
 .btn-warning:active,
 .btn-warning.active,
@@ -3340,35 +3340,35 @@ fieldset[disabled] .btn-warning:focus,
 .btn-warning.disabled.focus,
 .btn-warning[disabled].focus,
 fieldset[disabled] .btn-warning.focus {
-  background-color: #fb7f1c;
-  border-color: #f97104;
+  background-color: #efd376;
+  border-color: #eccc5f;
 }
 .btn-warning .badge {
-  color: #fb7f1c;
+  color: #efd376;
   background-color: #ffffff;
 }
 .btn-danger {
   color: #ffffff;
-  background-color: #ff3c3c;
-  border-color: #ff2222;
+  background-color: #ef7676;
+  border-color: #ec5f5f;
 }
 .btn-danger:focus,
 .btn-danger.focus {
   color: #ffffff;
-  background-color: #ff0909;
-  border-color: #a20000;
+  background-color: #ea4848;
+  border-color: #b71515;
 }
 .btn-danger:hover {
   color: #ffffff;
-  background-color: #ff0909;
-  border-color: #e40000;
+  background-color: #ea4848;
+  border-color: #e62828;
 }
 .btn-danger:active,
 .btn-danger.active,
 .open > .dropdown-toggle.btn-danger {
   color: #ffffff;
-  background-color: #ff0909;
-  border-color: #e40000;
+  background-color: #ea4848;
+  border-color: #e62828;
 }
 .btn-danger:active:hover,
 .btn-danger.active:hover,
@@ -3380,8 +3380,8 @@ fieldset[disabled] .btn-warning.focus {
 .btn-danger.active.focus,
 .open > .dropdown-toggle.btn-danger.focus {
   color: #ffffff;
-  background-color: #e40000;
-  border-color: #a20000;
+  background-color: #e62828;
+  border-color: #b71515;
 }
 .btn-danger:active,
 .btn-danger.active,
@@ -3397,11 +3397,11 @@ fieldset[disabled] .btn-danger:focus,
 .btn-danger.disabled.focus,
 .btn-danger[disabled].focus,
 fieldset[disabled] .btn-danger.focus {
-  background-color: #ff3c3c;
-  border-color: #ff2222;
+  background-color: #ef7676;
+  border-color: #ec5f5f;
 }
 .btn-danger .badge {
-  color: #ff3c3c;
+  color: #ef7676;
   background-color: #ffffff;
 }
 .btn-link {
@@ -3576,7 +3576,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #7448ff;
+  background-color: #25b16c;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -4103,7 +4103,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #7448ff;
+  background-color: #25b16c;
 }
 .nav-stacked > li {
   float: none;
@@ -4763,8 +4763,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 3;
   color: #ffffff;
-  background-color: #7448ff;
-  border-color: #7448ff;
+  background-color: #25b16c;
+  border-color: #25b16c;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4881,39 +4881,39 @@ a.label:focus {
   background-color: #5e5e5e;
 }
 .label-primary {
-  background-color: #7448ff;
+  background-color: #25b16c;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #4d15ff;
+  background-color: #1c8752;
 }
 .label-success {
-  background-color: #0bd670;
+  background-color: #76efb2;
 }
 .label-success[href]:hover,
 .label-success[href]:focus {
-  background-color: #09a557;
+  background-color: #48ea98;
 }
 .label-info {
-  background-color: #2c41e4;
+  background-color: #76b9ef;
 }
 .label-info[href]:hover,
 .label-info[href]:focus {
-  background-color: #192dc4;
+  background-color: #48a2ea;
 }
 .label-warning {
-  background-color: #fb7f1c;
+  background-color: #efd376;
 }
 .label-warning[href]:hover,
 .label-warning[href]:focus {
-  background-color: #e06604;
+  background-color: #eac448;
 }
 .label-danger {
-  background-color: #ff3c3c;
+  background-color: #ef7676;
 }
 .label-danger[href]:hover,
 .label-danger[href]:focus {
-  background-color: #ff0909;
+  background-color: #ea4848;
 }
 .badge {
   display: inline-block;
@@ -5146,7 +5146,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #7448ff;
+  background-color: #25b16c;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5168,7 +5168,7 @@ a.thumbnail.active {
   animation: progress-bar-stripes 2s linear infinite;
 }
 .progress-bar-success {
-  background-color: #0bd670;
+  background-color: #76efb2;
 }
 .progress-striped .progress-bar-success {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5176,7 +5176,7 @@ a.thumbnail.active {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-bar-info {
-  background-color: #2c41e4;
+  background-color: #76b9ef;
 }
 .progress-striped .progress-bar-info {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5184,7 +5184,7 @@ a.thumbnail.active {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-bar-warning {
-  background-color: #fb7f1c;
+  background-color: #efd376;
 }
 .progress-striped .progress-bar-warning {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5192,7 +5192,7 @@ a.thumbnail.active {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-bar-danger {
-  background-color: #ff3c3c;
+  background-color: #ef7676;
 }
 .progress-striped .progress-bar-danger {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5310,8 +5310,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #7448ff;
-  border-color: #7448ff;
+  background-color: #25b16c;
+  border-color: #25b16c;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5327,7 +5327,7 @@ button.list-group-item {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #ffffff;
+  color: #b3efd1;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5707,22 +5707,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #7448ff;
+  border-color: #25b16c;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #7448ff;
-  border-color: #7448ff;
+  background-color: #25b16c;
+  border-color: #25b16c;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #7448ff;
+  border-top-color: #25b16c;
 }
 .panel-primary > .panel-heading .badge {
-  color: #7448ff;
+  color: #25b16c;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #7448ff;
+  border-bottom-color: #25b16c;
 }
 .panel-success {
   border-color: #d6e9c6;
