--- a/src/css/custom-bootstrap-buttons.css
+++ b/src/css/custom-bootstrap-buttons.css
@@ -1,15 +1,84 @@
 .btn{
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
   background-image: none;
   color: #000000;
   text-shadow: none;
   border-radius: 0px;
-  border: 0.5px solid rgba(0, 0, 0, 0.04);
-  font-weight: 500
+  border: 0px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 10pt;
+  letter-spacing: 2.49px;
 }
+
 
 .btn-default{
   color: #000000
+}
+
+.btn-primary:active:hover,
+.btn-primary.active:hover,
+.open > .dropdown-toggle.btn-primary:hover,
+.btn-primary:active:focus,
+.btn-primary.active:focus,
+.open > .dropdown-toggle.btn-primary:focus,
+.btn-primary:active.focus,
+.btn-primary.active.focus,
+.open > .dropdown-toggle.btn-primary.focus {
+  color: #000000;
+}
+
+.btn-success:active:hover,
+.btn-success.active:hover,
+.open > .dropdown-toggle.btn-success:hover,
+.btn-success:active:focus,
+.btn-success.active:focus,
+.open > .dropdown-toggle.btn-success:focus,
+.btn-success:active.focus,
+.btn-success.active.focus,
+.open > .dropdown-toggle.btn-success.focus {
+  color: #000000;
+}
+
+.btn-info:active:hover,
+.btn-info.active:hover,
+.open > .dropdown-toggle.btn-info:hover,
+.btn-info:active:focus,
+.btn-info.active:focus,
+.open > .dropdown-toggle.btn-info:focus,
+.btn-info:active.focus,
+.btn-info.active.focus,
+.open > .dropdown-toggle.btn-info.focus {
+  color: #000000;
+}
+
+.btn-warning:active:hover,
+.btn-warning.active:hover,
+.open > .dropdown-toggle.btn-warning:hover,
+.btn-warning:active:focus,
+.btn-warning.active:focus,
+.open > .dropdown-toggle.btn-warning:focus,
+.btn-warning:active.focus,
+.btn-warning.active.focus,
+.open > .dropdown-toggle.btn-warning.focus {
+  color: #000000;
+}
+
+.btn-danger:active:hover,
+.btn-danger.active:hover,
+.open > .dropdown-toggle.btn-danger:hover,
+.btn-danger:active:focus,
+.btn-danger.active:focus,
+.open > .dropdown-toggle.btn-danger:focus,
+.btn-danger:active.focus,
+.btn-danger.active.focus,
+.open > .dropdown-toggle.btn-danger.focus {
+  color: #000000;
+}
+
+
+.btn:focus,.btn:active {
+   outline: none !important;
+   color: #000000
 }
 
 .btn:focus{
@@ -19,4 +88,14 @@
 .btn:hover{
   color: #000000;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.20);
+}
+
+/* Toggle Buttons */
+.btn-toggle{
+  background: #D6D6D6;
+}
+
+.btn-toggle.active{
+  background: #76EFB2;
+  color: #000000;
 }
