--- a/src/css/custom-bootstrap-forms.css
+++ b/src/css/custom-bootstrap-forms.css
@@ -19,6 +19,7 @@
   font-weight: 400;
   font-size: 10pt;
   margin-bottom: 0px;
+  letter-spacing: 0.5px;
 }
 
 .form-horizontal .form-group{
@@ -31,11 +32,15 @@
   padding: 20px 0px 25px;
   font-weight: 600;
   border-radius: 0px;
+  background: none;
 }
 
 .form-control{
   font-size: 14pt;
   padding-left: 0px;
+  border-radius: 0px;
+  border: 0.5px solid #686868;
+  background: none;
 }
 
 .form-control:focus {
@@ -75,6 +80,24 @@ select > option .placeholder{
   color: green
 }
 
+
+.select-dropdown {
+    position: relative;
+}
+
+.select-dropdown:before {
+  content: "";
+  position: absolute;
+  right: 0px;
+  top: 16px;
+	width: 0;
+	height: 0;
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-top: 7px solid #000000;
+}
+
+
 .form-group > input:focus{
     outline: none;
 }
@@ -92,6 +115,10 @@ select > option .placeholder{
     outline: none;
 }
 
+
+textarea.form-control{
+  padding: 15px
+}
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: pink;
